# pycap-dss

./: .gitattributes  .gitignore  MANIFEST.in  README.md  long_description.rst  pyproject.toml  setup.py
.github/workflows/: build_docs.yaml  release.yml  test.yaml
docs/: installation.rst  release-history.rst
docs/examples/: AnalysisProject_Demonstration.ipynb  Solutions_Demonstration.ipynb  WellClass_Demonstration.ipynb
pycap/: __init__.py  _version.py  analysis_project.py  compare_hunt03_implementations.py  solutions.py  solutions_optimized.py  test_calcs.py  test_hunt03_optimized.py  wells.py
