[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pycap-dss"
description = "Framework for anaytical streamflow depletion and drawdown calculations"
dynamic = ["version"]
authors = [
  {name = "Michael Fienen", email = "mnfienen@usgs.gov"},
  {name = "Aaron Pruitt", email = "Aaron.Pruitt@wisconsin.gov"},
  {name = "Howard Reeves", email = "hwreeves@usgs.gov"}
]
maintainers = [
  {name = "Michael Fienen", email = "mnfienen@usgs.gov"}
]
readme = "Readme.md"
keywords = ["streamflow depletion", "analytical solutions","drawdown", "groundwater", "hydrogeology"]
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.11"
dependencies = [
    "ipython",
   "jupyter",
   "notebook",
   "ipykernel",
   "matplotlib",
   "pyyaml",
   "geopandas",
   "numpy",
   "scipy",
   "pandas",
   "gdal",
   "fiona",
   "rasterio>=1.0",
   "rasterstats",
   "shapely",
   "rtree",
   "pyproj>=2.0",
   "pyshp",
   "xlrd",
   "openpyxl",
   "requests"
]

test = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-timeout"
]
docs = [
"sphinx",
"ruff",
"black",
"numpydoc",
"nbsphinx ", 
"sphinx-copybutton",
"sphinx_rtd_theme"
]


[project.urls]
documentation = "https://doi-usgs.github.io/pycap-dss/latest/"
repository = "https://github.com/doi-usgs/pycap-dss"