[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"



[project]
name = "pycap-dss"
description = "long_description.rst"
version = "1.3.0"
authors = [
  {name = "Michael Fienen", email = "mnfienen@usgs.gov"},
  {name = "Aaron Pruitt", email = "Aaron.Pruitt@wisconsin.gov"},
  {name = "Howard Reeves", email = "hwreeves@usgs.gov"}
]
maintainers = [
  {name = "Michael Fienen", email = "mnfienen@usgs.gov"}
]
readme = "Readme.md"
keywords = ["streamflow depletion", "analytical solutions","drawdown", "groundwater", "hydrogeology"]
license-files = [
    "LICENSE.md"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "ipython",
   "jupyter",
   "notebook",
   "ipykernel",
   "matplotlib",
   "pyyaml",
   "geopandas",
   "numpy",
   "scipy",
   "pandas",
   "gdal",
   "fiona",
   "rasterio>=1.0",
   "rasterstats",
   "shapely",
   "rtree",
   "pyproj>=2.0",
   "pyshp",
   "xlrd",
   "openpyxl",
   "requests"
]

[tool.setuptools.packages.find]
include = ["pycap","pycap*"]

[project.optional-dependencies]
test = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-timeout"
]
docs = [
"sphinx",
"ruff",
"black",
"numpydoc",
"nbsphinx ", 
"sphinx-copybutton",
"sphinx_rtd_theme"
]
# [tool.versioneer]
# VCS = "git"
# style = "pep440"
# versionfile_source = "pycap/_version.py"
# versionfile_build = "pycap/_version.py"
# tag_prefix = ""
# parentdir_prefix = "pycap-"

[project.urls]
documentation = "https://doi-usgs.github.io/pycap-dss/latest/"
repository = "https://github.com/doi-usgs/pycap-dss"
